Improve heading fallback font to avoid layout jump

--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -10,8 +10,11 @@
   --font-base: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Helvetica Neue', 'Arial', 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  --font-heading: 'Areno', var(--font-base);
-  --font-title: 'Areno Rough', var(--font-base);
+  --font-heading-base: 'Impact Regular', Haettenschweiler,
+    'Franklin Gothic Bold', Charcoal, 'Helvetica Inserat',
+    'Bitstream Vera Sans Bold', 'Arial Black', sans serif;
+  --font-heading: 'Areno', var(--font-heading-base);
+  --font-title: 'Areno Rough', var(--font-heading-base);
   --font-monospace: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo,
     Courier, monospace;
 
@@ -23,15 +26,19 @@
 }
 
 @font-face {
-  font-weight: normal;
   font-family: 'Areno';
   src: url('../assets/areno.woff2') format('woff2'),
     url('../assets/areno.woff') format('woff');
 }
 
 @font-face {
-  font-weight: normal;
   font-family: 'Areno Rough';
   src: url('../assets/areno-rough-subset.woff2') format('woff2'),
     url('../assets/areno-rough-subset.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Impact Regular';
+  font-weight: bold;
+  src: local('Impact');
 }
